Prise en compte de certains TODO Refactoring suivant les contributions de Richard